@@ -22,9 +22,9 @@ apply from: "${rootProject.projectDir}/gradle/config/scripts/coverage.gradle"
 
 group = "$group"
 version = "$projectVersion"
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenCentral()
@@ -58,12 +58,27 @@ dependencies {
     testImplementation("org.mockito:mockito-core:$mockitoVersion")
 }
 
+// https://stackoverflow.com/questions/73465937/apache-spark-3-3-0-breaks-on-java-17-with-cannot-access-class-sun-nio-ch-direct
+var sparkJava17CompatibleJvmArgs = [
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+        "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+        "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED",
+]
+
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
+    jvmArgs += sparkJava17CompatibleJvmArgs
     useJUnitPlatform()
-    filter {
-      // includeTestsMatching "ETL*Test"
-    }
 }
 
 application {
@@ -76,7 +91,6 @@ jacocoTestReport {
             xml.enabled true
             csv.enabled true
             html.enabled true
-            // html.destination "${buildDir}/reports/jacoco/test/"
     }
 }
 
